<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.codingschool.ideabase.ui.register.RegisterViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:context=".ui.register.RegisterFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/vwInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                app:layout_constraintBottom_toTopOf="@+id/vwButtons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"

                    android:hint="@string/firstname"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/tilLastname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onTextChanged="@{vm::onFirstnameTextChanged}"
                        android:text="@={vm.firstname}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:hint="@string/lastname"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/tilEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilFirstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onTextChanged="@{vm::onLastnameTextChanged}"
                        android:text="@={vm.lastname}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:hint="@string/email"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/tilPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilLastname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:onTextChanged="@{vm::onEmailTextChanged}"
                        android:text="@={vm.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:focusable="true"
                    android:hint="@string/password_login"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"

                    app:layout_constraintBottom_toTopOf="@+id/tilPasswordagain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:onTextChanged="@{vm::onPasswordTextChanged}"
                        android:text="@={vm.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPasswordagain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:hint="@string/repeat_password"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordagain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:onTextChanged="@{vm::onPassword2TextChanged}"
                        android:text="@={vm.password2}" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/vwButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vwInput"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/margin_small"
                    android:backgroundTint="@color/yellow"
                    android:onClick="@{() -> vm.onRegisterClick()}"
                    android:text="@string/register"
                    android:textColor="@color/black"

                    app:layout_constraintBottom_toTopOf="@+id/btnCancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/margin_small"
                    android:onClick="@{() -> vm.onCancelClick()}"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>