...
                    app:layout_constraintBottom_toTopOf="@+id/tilPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:onTextChanged="@{vm::onUsernameTextChanged}"
                        android:text="@={vm.username}" />

...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vwInput"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/margin_small"
                    android:backgroundTint="@color/yellow"
                    android:onClick="@{() -> vm.onLoginClick()}"
                    android:text="@string/login_bnt_login"
...
